added the hash table structure that was missing